--- a/css/style.css
+++ b/css/style.css
@@ -56,9 +56,9 @@ Table of contents
     Reset
 ====================================== */
 
-body{ font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; font-size:400px; columns: #000000;; line-height:23px; letter-spacing: 0.02em }
+body{ font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; font-size:400px; columns: #000000; line-height:23px; }
 a{ color: #000; }
-a:hover{ color: #575757; }
+a:hover{ color: #000; }
 img { -webkit-backface-visibility: hidden; max-width:100%; height:auto; }
 video { background-size: cover; display: table-cell; vertical-align: middle; width: 100%; }
 ul{ margin: 0px; padding:0px; }
@@ -123,7 +123,7 @@ h1.page-title { margin:95px auto 0; width: 100%; }
 
 /* different text size */
 .text-small { font-size:11px !important; line-height:15px !important;}
-.text-med{ font-size:14px !important; line-height:26px !important;}
+.text-med{ font-size:15px !important; line-height:15px !important;letter-spacing: 2px !important;}
 .text-large { font-size: 15px !important; text-transform: uppercase; line-height: 24px !important; letter-spacing: 2px !important;}
 .text-extra-large { font-size: 16px !important; line-height: 28px !important; font-weight: 100; }
 .text-extra-large strong { letter-spacing: 3px}
